--- a/.github/workflows/reusable-upgrade-testing.yml
+++ b/.github/workflows/reusable-upgrade-testing.yml
@@ -65,7 +65,7 @@ jobs:
           -e MYSQL_ROOT_PASSWORD="root"
           -e MYSQL_DATABASE="test_db"
           --entrypoint sh ${{ inputs.db-type }}:${{ inputs.db-version }}
-          -c "exec docker-entrypoint.sh mysqld${{ inputs.db-type == 'mysql' && contains( fromJSON('["7.2", "7.3"]'), inputs.php ) && ' --default-authentication-plugin=mysql_native_password' || '' }}"
+          -c "exec docker-entrypoint.sh mysqld${{ contains( fromJSON('["7.2", "7.3"]'), matrix.php ) && '8.4' == matrix.db-version && '--authentication-policy=mysql_native_password' || contains( fromJSON('["7.2", "7.3"]'), matrix.php ) && ' --default-authentication-plugin=mysql_native_password' || '' }}"
 
     steps:
       - name: Set up PHP ${{ inputs.php }}
